--- a/Exercise_for_Pool/web/web-trace1/index.html
+++ b/Exercise_for_Pool/web/web-trace1/index.html
@@ -1,28 +1,126 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <title>サイトタイトル</title>
-        <meta name="description" content="ディスクリプションを入力">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="">
-        <!-- [if lt IE 9] -->
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-        <!-- [endif] -->
-        <script src="main.js"></script>
-    </head>
-    <body>
-        <!----- header----->
-        <header>ヘッダー</header>
-        <!----- /header ----->
-        
-        <!----- main ----->
-        <main></main>
-        <!----- /main ----->
-        
-        <!----- footer ----->
-        <footer></footer>
-        <!----- /footer ----->
-    </body>
+	<head>
+		<meta charset="utf-8" />
+		<title>サイトタイトル</title>
+		<meta name="description" content="ディスクリプションを入力" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="reset.css" />
+		<link rel="stylesheet" href="style.css" />
+		<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+		<!-- [if lt IE 9] -->
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+		<!-- [endif] -->
+	</head>
+	<body>
+		<!----- header----->
+		<header id="header">
+			<h1 class="site-title">
+				<a href="#">My Work</a>
+			</h1>
+			<nav>
+				<ul>
+					<li><a href="#about">About</a></li>
+					<li><a href="#works">Works</a></li>
+					<li><a href="#news">News</a></li>
+					<li><a href="#contact">Contact</a></li>
+					<li>
+						<a href="https://www.instagram.com/"
+							><img class="icon" src="./img/icon-instagram.png" alt=""
+						/></a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<!----- /header ----->
+
+		<!----- main ----->
+		<main>
+			<div class="cover">
+				<picture>
+					<source media="(max-width: 600px)" srcset="./img/mainvisual-sp.jpg" />
+					<img src="./img/mainvisual-pc.jpg" alt="" />
+				</picture>
+			</div>
+			<!-- about -->
+			<section id="about" class="wrapper">
+				<h2 class="section-title">About</h2>
+				<ul>
+					<li>Xxxxx Ashley</li>
+					<li>
+						2th Floor xxxxx Building x-x-x Nishiazabu, Minato-ku, Tokyo 106-0031
+						Japan
+					</li>
+					<li>tel: 000-0000-0000</li>
+					<li>url: www.xxxxxx.jp</li>
+					<li>mail: xxx@xxxxxx.jp</li>
+				</ul>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam iste
+					autem et sint sapiente quo ullam harum temporibus cum, eaque
+					voluptatum suscipit illum velit assumenda eius quaerat dolorum
+					distinctio? In illum quidem non vitae, rem dolorem quisquam aspernatur
+					eligendi natus consequuntur qui accusamus magnam ab ipsa et ipsam.
+					Maiores, nobis.
+				</p>
+			</section>
+			<!-- works -->
+			<section id="works" class="wrapper">
+				<h2 class="section-title">Works</h2>
+				<ul>
+					<li><img src="./img/works1.jpg" alt="works1" /></li>
+					<li><img src="./img/works2.jpg" alt="works2" /></li>
+					<li><img src="./img/works3.jpg" alt="works3" /></li>
+					<li><img src="./img/works4.jpg" alt="works4" /></li>
+					<li><img src="./img/works5.jpg" alt="works5" /></li>
+					<li><img src="./img/works6.jpg" alt="works6" /></li>
+				</ul>
+			</section>
+			<!-- news -->
+			<section id="news" class="wrapper">
+				<h2 class="section-title">News</h2>
+				<dl>
+					<dt>2020.XX.XX</dt>
+					<dd>デザイン雑誌「ＸＸＸＸＸＸ Vol.11』に掲載していただきました。</dd>
+					<dt>2020.XX.XX</dt>
+					<dd>ＸＸ月ＸＸ日から写真集「ＸＸＸＸＸＸＸ」の販売を開始します。</dd>
+					<dt>2019.XX.XX</dt>
+					<dd>
+						【イベント開催のお知らせ】テキストテキストテキストテキストテキストテキストテキスト
+					</dd>
+					<dt>2019.XX.XX</dt>
+					<dd>デザイン雑誌「ＸＸＸＸＸＸ Vol.10』に掲載していただきました。</dd>
+					<dt>2019.XX.XX</dt>
+					<dd>
+						【個展開催のお知らせ】テキストテキストテキストテキストテキストテキストテキスト
+					</dd>
+				</dl>
+			</section>
+			<!-- contact -->
+			<section id="contact" class="wrapper">
+				<h2 class="section-title">Contact</h2>
+				<form action="#" method="post">
+					<div>
+						<label for="name">NAME</label>
+						<input type="text" id="name" name="name" />
+					</div>
+					<div>
+						<label for="email">E-mail</label>
+						<input type="mail" id="email" name="email" />
+					</div>
+					<div>
+						<label for="message">MESSAGE</label>
+						<textarea id="message" name="message"></textarea>
+					</div>
+					<button type="submit">送信</button>
+				</form>
+			</section>
+		</main>
+		<!----- /main ----->
+
+		<!----- footer ----->
+		<footer id="footer"><p>© 2020 My Work</p></footer>
+		<!----- /footer ----->
+	</body>
 </html>
